--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.31.1",
+    "@astrojs/vercel": "^8.0.2",
     "astro": "^5.1.5",
     "sharp": "^0.32.5"
   }
